# crud_example

./: .env  Cargo.toml  Rocket.toml
migrations/2022-09-10-110748_create_todo/: down.sql  up.sql
src/: main.rs  schema.rs
src/database/: mod.rs  todo.rs
src/models/: content.rs  mod.rs  todo.rs
src/models/enums/: importance.rs  mod.rs  status.rs
src/routes/: crud.rs
